--- a/public/views/chat.html
+++ b/public/views/chat.html
@@ -9,7 +9,7 @@
 	<script src="../scripts/chat.js"></script>
 </head>
 <body>
-<div class="col-xs-4">
+<div class="col-xs-4 row">
 	<div>
 		<label for="UserName">UserName:</label>
 		<input id="UserName" type="text" class="form-control" placeholder="UserName" name="UserName">
@@ -21,7 +21,7 @@
 	</div>
 	<button id="submit" type="submit" class="btn btn-default" onclick="emitMessage()">Comment</button>
 </div>
-<div id="comments" class="col-xs-6">
+<div id="comments" class=" row col-xs-9">
 
 </div>
 </body>
